change fix location mistake

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -83,7 +83,7 @@
 
 \subsection{Georgia Institute \\ of Technology}
 \descript{B.S. in Computer Engineering}
-\location{Expected May 2019 | Atlanta, GA \\ Cum. GPA: 3.91}
+\location{Expected August 2015 - May 2019 | Atlanta, GA \\ Cum. GPA: 3.91}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -193,13 +193,13 @@ Six Sigma Yellow Belt
 \section{Research}
 \runsubsection{Intelligent Vision \& Automation Lab}
 \descript{| Research Assistant}
-\location{Sept 2017 – December 2017 | Ithaca, NY}
+\location{Sept 2017 – December 2017 | Georgia Tech | Atlanta, GA}
 Worked with a team of four other undergraduate researchers, combining AR technologies and ROS to create a feedback system such that a user can control a robotic arm with the Hololens.
 \sectionsep
 
 \runsubsection{Inan Medical Devices Lab}
 \descript{| Research Assistant}
-\location{Sept 2016 – May 2017 | Ithaca, NY}
+\location{Sept 2016 – May 2017 | Georgia Tech | Atlanta, GA}
 Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices. Implemented vibrational system using accelerometers and a bone transducer to generate a heat map to predict location.
 \sectionsep
 
