remove ig from resume

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -93,8 +93,7 @@
 \section{Links} 
 Personal Site://  \href{www.albertoli.tech}{\custombold{www.albertoli.tech}} \\
 LinkedIn://  \href{https://www.linkedin.com/in/alberto-li-127410b9/}{\custombold{albertoli}} \\
-Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}} \\
-Instagram://  \href{https://www.instagram.com/dumb_ytpos/}{\custombold{@dumb\_ytpos}}
+Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -127,7 +126,7 @@ Six Sigma Yellow Belt
 \descript{Teaching Assistant}
 \location{January 2017 – May 2017}
 \textbullet{} Facilitate a rapid-prototyping class dominated by FPGA projects guiding students in their lab assignments \\
-\textbullet{} Aid in design and validation of digital logic circuits using industry standard equipment such as oscilloscopes and logic analyzers
+\textbullet{} Aid in design and validation of digital logic circuits using industry standard equipment such as oscilloscopes \\ and logic analyzers
 % {\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
 % Unix Tools and Scripting \\
 \sectionsep
@@ -136,8 +135,9 @@ Six Sigma Yellow Belt
 \descript{Training Assistant}
 \location{Sept 2016 – May 2017}
 \textbullet{} A Robotics team that competes in a 6-on-6 AI-driven soccer match against teams from around the world \\
-\textbullet{} Lead technical training sessions designed for new members in RoboJackets \\
-\textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, and practical skills to new members 
+\textbullet{} Lead technical training sessions designed for new RoboJackets members \\
+\textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, \\
+and practical skills to new members 
 
 \sectionsep
 
