--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -83,7 +83,7 @@
 
 \subsection{Georgia Institute \\ of Technology}
 \descript{B.S. in Computer Engineering}
-\location{Expected August 2015 - May 2019 | Atlanta, GA \\ Cum. GPA: 3.91}
+\location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.91}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
