--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -159,9 +159,9 @@ and practical skills to new members
 
 \runsubsection{ExxonMobil}
 \descript{| Software Engineering Intern }
-\location{May 2018 – Current | Houston, TX}
+\location{May 2018 – August 2018 | Houston, TX}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}\item Developing full stack solutions in React + Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Rewriting HR application to increase system stability and reduce user error
+\begin{tightemize}\item Worked on rewriting full stack solution of HR application in React + Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Increased system stability and reduced user error of HR application
 \end{tightemize}
 \sectionsep
 
