update experience timeline

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -48,196 +48,201 @@
 
 
 \begin{document}
-	
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%
-	%     LAST UPDATED DATE
-	%
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\lastupdated
-	
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%
-	%     TITLE NAME
-	%
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	
-	
-	\namesection{}{Alberto Li}{ \urlstyle{same}\url{www.albertoli.tech} |
-		\href{mailto:lialberto96@gmail.com}{lialberto96@gmail.com} | 305.790.7218 | U.S. Citizen
-	}
-	
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%
-	%     COLUMN ONE
-	%
-	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	
-	\begin{minipage}[t]{0.33\textwidth} 
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     EDUCATION
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Education} 
-		
-		\subsection{Georgia Institute \\ of Technology}
-		\descript{B.S. in Computer Engineering}
-		\location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
-		\sectionsep
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     LINKS
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Links} 
-		Personal Site://  \href{www.albertoli.tech}{\custombold{www.albertoli.tech}} \\
-		LinkedIn://  \href{https://www.linkedin.com/in/alberto-li-127410b9/}{\custombold{albertoli}} \\
-		Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
-		\sectionsep
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     SKILLS
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Skills}
-		\subsection{Programming}
-		Java \textbullet{} Python \textbullet{} C/C++ \textbullet{} C\#\\
-		Matlab \textbullet{} Javascript \textbullet{}Bash \textbullet{} SQL
-		\sectionsep
-		
-		\subsection{Frameworks \& Libraries}
-		Angular \textbullet{} NodeJS \textbullet{} React \textbullet{} Redux \textbullet{} \\
-		Spark \textbullet{} MongoDB
-		\sectionsep
-		
-		\subsection{Instrumentation}
-		Oscilloscope \textbullet{}  Logic Analyzer \textbullet{} \\  Signal Analyzer \textbullet{} Soldering
-		\sectionsep
-		
-		\subsection{Certifications}
-		NI LabVIEW CLAD \textbullet{}\\ 
-		Six Sigma Yellow Belt
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     Leadership
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Leadership}
-		\subsection{ECE 2031 - Digital \\ Design Lab}
-		\descript{Teaching Assistant}
-		\location{January 2017 – May 2017}
-		\textbullet{} Facilitate a rapid-prototyping class dominated by FPGA projects guiding students in their lab assignments \\
-		\textbullet{} Aid in design and validation of digital logic circuits using industry standard equipment such as oscilloscopes \\ and logic analyzers
-		% {\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
-		% Unix Tools and Scripting \\
-		\sectionsep
-		
-		\subsection{GT RoboJackets - RoboCup}
-		\descript{Training Assistant}
-		\location{Sept 2016 – May 2017}
-		\textbullet{} A Robotics team that competes in a 6-on-6 AI-driven soccer match against teams from around the world \\
-		\textbullet{} Lead technical training sessions designed for new RoboJackets members \\
-		\textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, \\
-		and practical skills to new members 
-		
-		\sectionsep
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%
-		%     COLUMN TWO
-		%
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-	\end{minipage} 
-	\hfill
-	\begin{minipage}[t]{0.66\textwidth} 
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     EXPERIENCE
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Work Experience}
-		
-		\runsubsection{Goldman Sachs}
-		\descript{| Engineering Summer Analyst - Investmentment Banking Division }
-		\location{May 2019 – August 2019 | New York, NY}
-		\vspace{\topsep} % Hacky fix for awkward extra vertical space
-		\begin{tightemize}\item Marquee Jupiter Shareholder Analytics Platform feature enhancements \item Regional ownership breakdown analysis feature enhancement and investment banking excel report automation \item Cost-basis with multiples analysis for register funds/institutions for company investor portfolio
-		\end{tightemize}
-		\sectionsep
-		
-		\runsubsection{ExxonMobil}
-		\descript{| Software Engineering Intern }
-		\location{May 2018 – August 2018 | Houston, TX}
-		\begin{tightemize}\item Worked on rewriting full stack solution of HR application in React/Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Increased system stability and reduced user error of HR application
-		\end{tightemize}
-		\sectionsep
-		
-		\runsubsection{Intel Corporation}
-		\descript{| Product Development Intern }
-		\location{January 2018 – May 2018 | Folsom, CA}
-		\begin{tightemize}
-			\item Created wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol \item Developed automated yield report generation and e-mail distribution for 3D XPoint Apache Pass persistent memory DIMMs\end{tightemize}
-		\sectionsep
-		
-		\runsubsection{General Electric}
-		\descript{| Embedded Systems Intern}
-		\location{May 2017 – August 2017 | Minden, NV}
-		\begin{tightemize}
-			\item Developed advanced debugging system for monitoring device to help reduce product development time by 3 months\item Implemented client-server application on QNX Real-Time Operating System (RTOS) in C/C++ with Sockets API on the server-side and  a C\# front-end \end{tightemize}
-		\sectionsep
-		
-		\runsubsection{Florida Power \& Light}
-		\descript{| Software Engineering Intern}
-		\location{May 2016 – August 2016 | Miami, FL}
-		\begin{tightemize}
-			\item Designed and developed questions log application using Visual Basic and SQL Server for Customer Accounting to increase visibility and reporting capabilities \item	Exercised project management skills, scheduled demos and coordinated with training department to set up job aids and training sessions for application \end{tightemize}
-		\sectionsep
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     RESEARCH
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		\section{Research}
-		\runsubsection{Intelligent Vision \& Automation Lab}
-		\descript{| Research Assistant}
-		\location{Sept 2017 – December 2017 | Georgia Tech | Atlanta, GA}
-		\begin{tightemize}
-			\item Worked with a team of four other undergraduate researchers, combining AR technologies and ROS to create a feedback system such that a user can control a robotic arm with the Hololens.
-		\end{tightemize}
-		
-		\sectionsep
-		
-		\runsubsection{Inan Medical Devices Lab}
-		\descript{| Research Assistant}
-		\location{Sept 2016 – May 2017 | Georgia Tech | Atlanta, GA}
-		\begin{tightemize}
-			\item Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices. 
-			\item Implemented vibrational system using accelerometers and a bone transducer to generate a heat map to predict location. 
-		\end{tightemize}
-		\sectionsep
-		
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		%     Projects
-		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		
-		% \section{Projects}
-		% \runsubsection{Internet of Things (IoT) Smart HedgeHog Home}
-		% \descript{}
-		% An open source smart home system for hedgehog with monitoring features driven by data collected from a range of sensors to autonomously control hedgehog home. Deployed application on an AWS EC2 cloud instance using basic Flask server.
-		% \sectionsep
-		
-		% \runsubsection{Computer Vision Object Classifier}
-		% \descript{}
-		% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided. 
-		% \sectionsep
-		
-		% \begin{tabular}{rll}
-		% 2014	     & top 52/2500  & KPCB Engineering Fellow\\
-		% 2014	     & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-		
-		% \end{tabular}
-		% \sectionsep
-		
-	\end{minipage} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%     LAST UPDATED DATE
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\lastupdated
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%     TITLE NAME
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\namesection{}{Alberto Li}{ \urlstyle{same}\url{www.albertoli.tech} |
+\href{mailto:lialberto96@gmail.com}{lialberto96@gmail.com} | 305.790.7218 | U.S. Citizen
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%     COLUMN ONE
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{minipage}[t]{0.33\textwidth} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     EDUCATION
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Education} 
+
+\subsection{Georgia Institute \\ of Technology}
+\descript{B.S. in Computer Engineering}
+\location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     LINKS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Links} 
+Personal Site://  \href{www.albertoli.tech}{\custombold{www.albertoli.tech}} \\
+LinkedIn://  \href{https://www.linkedin.com/in/alberto-li-127410b9/}{\custombold{albertoli}} \\
+Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     SKILLS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Skills}
+\subsection{Programming}
+Java \textbullet{} Python \textbullet{} C/C++ \textbullet{} C\#\\
+Matlab \textbullet{} Javascript \textbullet{}Bash \textbullet{} SQL
+\sectionsep
+
+\subsection{Frameworks \& Libraries}
+Angular \textbullet{} NodeJS \textbullet{} React \textbullet{} Redux \textbullet{} \\
+Spark \textbullet{} MongoDB
+\sectionsep
+
+\subsection{Instrumentation}
+Oscilloscope \textbullet{}  Logic Analyzer \textbullet{} \\  Signal Analyzer \textbullet{} Soldering
+\sectionsep
+
+\subsection{Certifications}
+NI LabVIEW CLAD \textbullet{}\\ 
+Six Sigma Yellow Belt
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Leadership
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Leadership}
+\subsection{ECE 2031 - Digital \\ Design Lab}
+\descript{Teaching Assistant}
+\location{January 2017 – May 2017}
+\textbullet{} Facilitate a rapid-prototyping class dominated by FPGA projects guiding students in their lab assignments \\
+\textbullet{} Aid in design and validation of digital logic circuits using industry standard equipment such as oscilloscopes \\ and logic analyzers
+% {\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
+% Unix Tools and Scripting \\
+\sectionsep
+
+\subsection{GT RoboJackets - RoboCup}
+\descript{Training Assistant}
+\location{Sept 2016 – May 2017}
+\textbullet{} A Robotics team that competes in a 6-on-6 AI-driven soccer match against teams from around the world \\
+\textbullet{} Lead technical training sessions designed for new RoboJackets members \\
+\textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, \\
+and practical skills to new members 
+
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%     COLUMN TWO
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\end{minipage} 
+\hfill
+\begin{minipage}[t]{0.66\textwidth} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     EXPERIENCE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Work Experience}
+
+\runsubsection{Amazon Web Services}
+\descript{| Software Development Engineer }
+\location{March 2020 – Current | Seattle, WA}
+\sectionsep
+
+\runsubsection{Goldman Sachs}
+\descript{| Engineering Summer Analyst - Investmentment Banking Division }
+\location{May 2019 – August 2019 | New York, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}\item Worked on Marquee Jupiter Shareholder Analytics Platform \item Implemented regional ownership breakdown analysis feature and investment banking excel report automation \item Implemented cost-basis with multiples feature used for analyzing register funds/institutions on a company's investor portfolio 
+\end{tightemize}
+\sectionsep
+
+\runsubsection{ExxonMobil}
+\descript{| Software Engineering Intern }
+\location{May 2018 – August 2018 | Houston, TX}
+\begin{tightemize}\item Worked on rewriting full stack solution of HR application in React/Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Increased system stability and reduced user error of HR application
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Intel Corporation}
+\descript{| Product Development Intern }
+\location{January 2018 – May 2018 | Folsom, CA}
+\begin{tightemize}
+\item Created wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol \item Developed automated report generation tool for distributing recurring emails on yield metrics for persistent memory DIMMs\end{tightemize}
+\sectionsep
+
+\runsubsection{General Electric}
+\descript{| Embedded Systems Intern}
+\location{May 2017 – August 2017 | Minden, NV}
+\begin{tightemize}
+\item Developed advanced debugging system for monitoring device to help reduce product development time by 3 months\item Implemented client-server application on QNX Real-Time Operating System (RTOS) in C/C++ with Sockets API on the server-side and  a C\# front-end \end{tightemize}
+\sectionsep
+
+\runsubsection{Florida Power \& Light}
+\descript{| Software Engineering Intern}
+\location{May 2016 – August 2016 | Miami, FL}
+\begin{tightemize}
+\item Designed and developed questions log application using Visual Basic and SQL Server for Customer Accounting to increase visibility and reporting capabilities \item	Exercised project management skills, scheduled demos and coordinated with training department to set up job aids and training sessions for application \end{tightemize}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     RESEARCH
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Research}
+\runsubsection{Intelligent Vision \& Automation Lab}
+\descript{| Research Assistant}
+\location{Sept 2017 – December 2017 | Georgia Tech | Atlanta, GA}
+\begin{tightemize}
+\item Worked with a team of four other undergraduate researchers, combining AR technologies and ROS to create a feedback system such that a user can control a robotic arm with the Hololens.
+\end{tightemize}
+
+\sectionsep
+
+\runsubsection{Inan Medical Devices Lab}
+\descript{| Research Assistant}
+\location{Sept 2016 – May 2017 | Georgia Tech | Atlanta, GA}
+\begin{tightemize}
+\item Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices. 
+\item Implemented vibrational system using accelerometers and a bone transducer to generate a heat map to predict location. 
+\end{tightemize}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Projects
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% \section{Projects}
+% \runsubsection{Internet of Things (IoT) Smart HedgeHog Home}
+% \descript{}
+% An open source smart home system for hedgehog with monitoring features driven by data collected from a range of sensors to autonomously control hedgehog home. Deployed application on an AWS EC2 cloud instance using basic Flask server.
+% \sectionsep
+
+% \runsubsection{Computer Vision Object Classifier}
+% \descript{}
+% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided. 
+% \sectionsep
+
+% \begin{tabular}{rll}
+% 2014	     & top 52/2500  & KPCB Engineering Fellow\\
+% 2014	     & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
+
+% \end{tabular}
+% \sectionsep
+
+\end{minipage} 
 \end{document}
