Add Amazon SDE II to resume

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -73,7 +73,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.33\textwidth} 
+\begin{minipage}[t]{0.32\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -82,6 +82,8 @@
 \section{Education} 
 
 \subsection{Georgia Institute \\ of Technology}
+\descript{M.S. in Computer Science}
+\location{August 2020 - 2023}
 \descript{B.S. in Computer Engineering}
 \location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
 \sectionsep
@@ -102,8 +104,8 @@ Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
 
 \section{Skills}
 \subsection{Programming}
-Java \textbullet{} Python \textbullet{} C/C++ \textbullet{} C\#\\
-Matlab \textbullet{} Javascript \textbullet{}Bash \textbullet{} SQL
+Java \textbullet{} Python \textbullet{} Javascript \textbullet{} C\#\\
+Matlab \textbullet{} C/C++ \textbullet{}Bash \textbullet{} SQL \textbullet{} Ruby
 \sectionsep
 
 \subsection{Frameworks \& Libraries}
@@ -114,10 +116,6 @@ Spark \textbullet{} MongoDB
 \subsection{Instrumentation}
 Oscilloscope \textbullet{}  Logic Analyzer \textbullet{} \\  Signal Analyzer \textbullet{} Soldering
 \sectionsep
-
-\subsection{Certifications}
-NI LabVIEW CLAD \textbullet{}\\ 
-Six Sigma Yellow Belt
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Leadership
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -159,8 +157,9 @@ and practical skills to new members
 \section{Work Experience}
 
 \runsubsection{Amazon Web Services}
-\descript{| Software Development Engineer }
-\location{March 2020 – Current | Seattle, WA}
+\descript{| Software Engineer }
+\location{\custombold{SDE II} \hspace{} | April 2021 - Current | Seattle, WA
+\\\custombold{SDE I} \hspace{} \hspace{} | March 2020 – March 2021 | Seattle, WA}
 \sectionsep
 
 \runsubsection{Goldman Sachs}
@@ -208,7 +207,7 @@ and practical skills to new members
 \descript{| Research Assistant}
 \location{Sept 2017 – December 2017 | Georgia Tech | Atlanta, GA}
 \begin{tightemize}
-\item Worked with a team of four other undergraduate researchers, combining AR technologies and ROS to create a feedback system such that a user can control a robotic arm with the Hololens.
+\item Worked with team of undergraduate researchers to create feedback system for user to control a robotic arm with HoloLens using ROS and AR technology.
 \end{tightemize}
 
 \sectionsep
