Add Latex resume updates Amazon SDE II

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -83,7 +83,7 @@
 
 \subsection{Georgia Institute \\ of Technology}
 \descript{M.S. in Computer Science}
-\location{August 2020 - 2023}
+\location{August 2020 - 2023 (while working)}
 \descript{B.S. in Computer Engineering}
 \location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
 \sectionsep
