Fix latex resume spacing

--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -158,8 +158,8 @@ and practical skills to new members
 
 \runsubsection{Amazon Web Services}
 \descript{| Software Engineer }
-\location{\custombold{SDE II} \hspace{} | April 2021 - Current | Seattle, WA
-\\\custombold{SDE I} \hspace{} \hspace{} | March 2020 – March 2021 | Seattle, WA}
+\location{\custombold{SDE II} \hspace{0.1cm} | April 2021 - Current \hspace{0.9cm} | Seattle, WA
+\\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA}
 \sectionsep
 
 \runsubsection{Goldman Sachs}
