--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -54,7 +54,6 @@
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -80,14 +79,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Education} 
+\sectionsep
 
 \subsection{Georgia Institute \\ of Technology}
+\sectionsep
+
 \descript{M.S. in Computer Science}
-\location{August 2020 - 2023 (while working)}
+\location{August 2020 - 2023 \\ (while working Full-Time)}
+\sectionsep
+
 \descript{B.S. in Computer Engineering}
 \location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
 \sectionsep
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -159,21 +162,28 @@ and practical skills to new members
 \runsubsection{Amazon Web Services}
 \descript{| Software Engineer }
 \location{\custombold{SDE II} \hspace{0.1cm} | April 2021 - Current \hspace{0.9cm} | Seattle, WA
-\\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA}
+\\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA}\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}\item Designing and developing a geo-distributed and highly scalable data migration service for AWS
+
+\item Technical Stack: Java, React, Ruby on Rails, Databases - Postgres, MySQL, DynamoDb, 
+Infrastructure: EC2, S3, RDS, IAM, CFN
+\end{tightemize}
 \sectionsep
+
+
 
 \runsubsection{Goldman Sachs}
 \descript{| Engineering Summer Analyst - Investmentment Banking Division }
 \location{May 2019 – August 2019 | New York, NY}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}\item Worked on Marquee Jupiter Shareholder Analytics Platform \item Implemented regional ownership breakdown analysis feature and investment banking excel report automation \item Implemented cost-basis with multiples feature used for analyzing register funds/institutions on a company's investor portfolio 
+\begin{tightemize}\item Worked on Marquee Jupiter Shareholder Analytics Platform as a full-stack dev \item Implemented regional ownership breakdown analysis, cost-basis with multiples features, and investment banking excel report automation \item Technical Stack: Java, Angular, Scala, MongoDb
 \end{tightemize}
 \sectionsep
 
 \runsubsection{ExxonMobil}
 \descript{| Software Engineering Intern }
 \location{May 2018 – August 2018 | Houston, TX}
-\begin{tightemize}\item Worked on rewriting full stack solution of HR application in React/Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Increased system stability and reduced user error of HR application
+\begin{tightemize}
+\item Worked on rewriting full stack solution of HR application in React/Redux, .NET Core, and Entity Framework Core with a focus on User Centered Design \item Increased system stability and reduced user error of HR application
 \end{tightemize}
 \sectionsep
 
@@ -181,7 +191,8 @@ and practical skills to new members
 \descript{| Product Development Intern }
 \location{January 2018 – May 2018 | Folsom, CA}
 \begin{tightemize}
-\item Created wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol \item Developed automated report generation tool for distributing recurring emails on yield metrics for persistent memory DIMMs\end{tightemize}
+\item Created wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol and automated yield metric reporting capabilities
+\end{tightemize}
 \sectionsep
 
 \runsubsection{General Electric}
@@ -207,7 +218,7 @@ and practical skills to new members
 \descript{| Research Assistant}
 \location{Sept 2017 – December 2017 | Georgia Tech | Atlanta, GA}
 \begin{tightemize}
-\item Worked with team of undergraduate researchers to create feedback system for user to control a robotic arm with HoloLens using ROS and AR technology.
+\item Worked with team of undergraduate researchers to create feedback system for user to control a robotic arm with HoloLens using ROS and AR technology
 \end{tightemize}
 
 \sectionsep
@@ -216,8 +227,9 @@ and practical skills to new members
 \descript{| Research Assistant}
 \location{Sept 2016 – May 2017 | Georgia Tech | Atlanta, GA}
 \begin{tightemize}
-\item Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices. 
-\item Implemented vibrational system using accelerometers and a bone transducer to generate a heat map to predict location. 
+\item Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices
+\item Implemented vibrational system using accelerometers and a bone transducer
+to generate a heat map to predict location
 \end{tightemize}
 \sectionsep
 
