--- a/files/latex_resume/resume.tex
+++ b/files/latex_resume/resume.tex
@@ -15,16 +15,16 @@
 % default. If you get compilation errors saying a font is missing, find the line
 % on which the font is used and either change it to a font included with your
 % operating system or comment the line out to use the default font.
-% 
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% 
+%
 % TODO:
 % 1. Integrate biber/bibtex for article citation under publications.
 % 2. Figure out a smoother way for the document to flow onto the next page.
 % 3. Add styling information for a "Projects/Hacks" section.
 % 4. Add location/address information
 % 5. Merge OpenFont and MacFonts as a single sty with options.
-% 
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % CHANGELOG:
@@ -72,13 +72,13 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.32\textwidth} 
+\begin{minipage}[t]{0.32\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education} 
+\section{Education}
 \sectionsep
 
 \subsection{Georgia Institute \\ of Technology}
@@ -95,7 +95,7 @@
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links} 
+\section{Links}
 Personal Site://  \href{www.albertoli.tech}{\custombold{www.albertoli.tech}} \\
 LinkedIn://  \href{https://www.linkedin.com/in/alberto-li-127410b9/}{\custombold{albertoli}} \\
 Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
@@ -139,7 +139,7 @@ Oscilloscope \textbullet{}  Logic Analyzer \textbullet{} \\  Signal Analyzer \te
 \textbullet{} A Robotics team that competes in a 6-on-6 AI-driven soccer match against teams from around the world \\
 \textbullet{} Lead technical training sessions designed for new RoboJackets members \\
 \textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, \\
-and practical skills to new members 
+and practical skills to new members
 
 \sectionsep
 
@@ -149,9 +149,9 @@ and practical skills to new members
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\end{minipage} 
+\end{minipage}
 \hfill
-\begin{minipage}[t]{0.66\textwidth} 
+\begin{minipage}[t]{0.66\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -165,7 +165,7 @@ and practical skills to new members
 \\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA}\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}\item Designing and developing a geo-distributed and highly scalable data migration service for AWS
 
-\item Technical Stack: Java, React, Ruby on Rails, Databases - Postgres, MySQL, DynamoDb, 
+\item Technical Stack: Java, Ruby on Rails, Databases - Postgres, MySQL, DynamoDb,
 Infrastructure: EC2, S3, RDS, IAM, CFN
 \end{tightemize}
 \sectionsep
@@ -245,7 +245,7 @@ to generate a heat map to predict location
 
 % \runsubsection{Computer Vision Object Classifier}
 % \descript{}
-% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided. 
+% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided.
 % \sectionsep
 
 % \begin{tabular}{rll}
@@ -255,5 +255,5 @@ to generate a heat map to predict location
 % \end{tabular}
 % \sectionsep
 
-\end{minipage} 
+\end{minipage}
 \end{document}
