--- a/files/latex_resume/alberto_li_resume.tex
+++ b/files/latex_resume/alberto_li_resume.tex
@@ -15,16 +15,16 @@
 % default. If you get compilation errors saying a font is missing, find the line
 % on which the font is used and either change it to a font included with your
 % operating system or comment the line out to use the default font.
-%
+% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
+% 
 % TODO:
 % 1. Integrate biber/bibtex for article citation under publications.
 % 2. Figure out a smoother way for the document to flow onto the next page.
 % 3. Add styling information for a "Projects/Hacks" section.
 % 4. Add location/address information
 % 5. Merge OpenFont and MacFonts as a single sty with options.
-%
+% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % CHANGELOG:
@@ -72,30 +72,30 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.32\textwidth}
+\begin{minipage}[t]{0.32\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education}
+\section{Education} 
 \sectionsep
 
 \subsection{Georgia Institute \\ of Technology}
 \sectionsep
 
 \descript{M.S. in Computer Science}
-\location{August 2020 - 2023 \\ (while working Full-Time)}
+\location{2021 - 2023 | GPA: 3.80 / 4.00}
 \sectionsep
 
 \descript{B.S. in Computer Engineering}
-\location{August 2015 - May 2019 | Atlanta, GA \\ GPA: 3.92 / 4.00}
+\location{2015 - 2019 |  GPA: 3.92 / 4.00}
 \sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links}
+\section{Links} 
 Personal Site://  \href{www.albertoli.tech}{\custombold{www.albertoli.tech}} \\
 LinkedIn://  \href{https://www.linkedin.com/in/alberto-li-127410b9/}{\custombold{albertoli}} \\
 Github:// \href{https://www.github.com/albertoli}{\custombold{albertoli}}
@@ -139,7 +139,7 @@ Oscilloscope \textbullet{}  Logic Analyzer \textbullet{} \\  Signal Analyzer \te
 \textbullet{} A Robotics team that competes in a 6-on-6 AI-driven soccer match against teams from around the world \\
 \textbullet{} Lead technical training sessions designed for new RoboJackets members \\
 \textbullet{} Lecture about fundamental circuit analysis techniques, instrumentation, \\
-and practical skills to new members
+and practical skills to new members 
 
 \sectionsep
 
@@ -149,9 +149,9 @@ and practical skills to new members
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\end{minipage}
+\end{minipage} 
 \hfill
-\begin{minipage}[t]{0.66\textwidth}
+\begin{minipage}[t]{0.66\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -159,13 +159,24 @@ and practical skills to new members
 
 \section{Work Experience}
 
+\runsubsection{Amazon Advertising}
+\descript{| Software Engineer }
+\location{
+\custombold{SDE II} \hspace{0.1cm} | January 2022 - Current \hspace{0.6cm} | New York, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}\item Designing and developing the demand-side platform (DSP) that allows customers to programmatically buy ads to reach new and existing audiences
+\item Technical Stack: Java, Databases - DynamoDb, ElasticSearch \
+Infrastructure: ECS, S3, SQS, SNS, RDS, IAM, CFN
+\end{tightemize}
+\sectionsep
+
 \runsubsection{Amazon Web Services}
 \descript{| Software Engineer }
-\location{\custombold{SDE II} \hspace{0.1cm} | April 2021 - Current \hspace{0.9cm} | Seattle, WA
-\\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA}\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\location{\custombold{SDE II} \hspace{0.1cm} | April 2021 - January 2022 \hspace{0.05cm} | Seattle, WA
+\\\custombold{SDE I} \hspace{0.2cm} | March 2020 – March 2021 | Seattle, WA} % Hacky fix for awkward extra vertical space
 \begin{tightemize}\item Designing and developing a geo-distributed and highly scalable data migration service for AWS
 
-\item Technical Stack: Java, Ruby on Rails, Databases - Postgres, MySQL, DynamoDb,
+\item Technical Stack: Java, Ruby on Rails, Databases - Postgres, MySQL, DynamoDb, 
 Infrastructure: EC2, S3, RDS, IAM, CFN
 \end{tightemize}
 \sectionsep
@@ -223,16 +234,6 @@ Infrastructure: EC2, S3, RDS, IAM, CFN
 
 \sectionsep
 
-\runsubsection{Inan Medical Devices Lab}
-\descript{| Research Assistant}
-\location{Sept 2016 – May 2017 | Georgia Tech | Atlanta, GA}
-\begin{tightemize}
-\item Worked on a smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices
-\item Implemented vibrational system using accelerometers and a bone transducer
-to generate a heat map to predict location
-\end{tightemize}
-\sectionsep
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -245,7 +246,7 @@ to generate a heat map to predict location
 
 % \runsubsection{Computer Vision Object Classifier}
 % \descript{}
-% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided.
+% A simple Support Vector Machine trained with a set of face and car images that tells the difference between the two when a new image is provided. 
 % \sectionsep
 
 % \begin{tabular}{rll}
@@ -255,5 +256,5 @@ to generate a heat map to predict location
 % \end{tabular}
 % \sectionsep
 
-\end{minipage}
+\end{minipage} 
 \end{document}
